--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
     display: grid;
     grid-template-areas: "sidebar" "content" "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: 130px 800px 120px;
+    grid-template-rows: 70px 800px 120px;
     box-shadow: 1px 1px 5px 2px rgba(166, 159, 166, 1);
 }
 
@@ -26,6 +26,19 @@ body {
     grid-area: sidebar;
     background: linear-gradient(to right, #efe3e3, #97d8b1, #29374b);
     justify-content: center;
+}
+
+.sidebar a {
+    color: #111725;
+}
+
+.sidebar nav ul {
+    padding-right: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+    list-style-type: none;
 }
 
 .content {
